services/takahe/runstator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runstator
  labels:
    app: runstator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runstator
  template:
    metadata:
      labels:
        app: runstator
        app.kubernetes.io/name: takahe-runstator
    spec:
      containers:
      - name: runstator
        image: cmoultrie/takahe
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 101
          runAsGroup: 103
        command: ["/usr/local/bin/python3"]
        args: ["manage.py", "runstator"]
        volumeMounts:
        - mountPath: "/data"
          name: runstator-blobfuse
      volumes:
        - name: runstator-blobfuse
          persistentVolumeClaim:
            claimName: nfsdata-runstator
